some Java17 improvements